Style - Fixed some responsive alignment for pos

--- a/src/style/scss/components/Pos Components/Pos_Calculator.scss
+++ b/src/style/scss/components/Pos Components/Pos_Calculator.scss
@@ -75,7 +75,6 @@ $light-text: #000000;
   align-items: center;
   justify-content: center;
   flex-grow: 2;
-  min-height: 200px;
 }
 
 .summary-box {
@@ -94,7 +93,6 @@ $light-text: #000000;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.1rem 0;
 
   .label {
     font-weight: 500;
@@ -109,7 +107,7 @@ $light-text: #000000;
 
 .divider {
   border-top: 1px solid $bg-gray-600;
-  margin: 1rem 0;
+  margin: 0.3rem 0;
 }
 
 .total-summary {
@@ -118,19 +116,7 @@ $light-text: #000000;
   align-items: center;
   font-size: 1.5rem;
   font-weight: bold;
-  padding-top: 0.75rem;
-}
-
-@media (max-width: 1366px) {
-  .calculator-container {
-    grid-column: span 5;
-  }
-}
-
-@media (max-width: 1024px) {
-  .calculator-container {
-    grid-column: span 6;
-  }
+  padding-top: 0.3rem;
 }
 
 @media (max-width: 768px) {
