--- a/src/style/scss/components/Pos Components/Pos_CategoryGrid.scss
+++ b/src/style/scss/components/Pos Components/Pos_CategoryGrid.scss
@@ -87,3 +87,21 @@ $radius: 0.5rem;
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
+
+@media (max-width: 1400px) {
+  .text-2xl {
+    font-size: 1.2rem ;
+  }
+  .text-sm {
+    font-size: 0.8rem;
+  }
+}
+
+@media (max-width: 1100px) {
+  .text-2xl {
+    font-size: 1rem ;
+  }
+  .text-sm {
+    font-size: 0.8rem;
+  }
+}
